@@ -105,6 +105,7 @@ Changes Since 0.5
     paragraphs.
   - Fix internal hyperlinks.
   - Default type area defined in the document class (not by 'typearea').
+  - Float placement made configurable and changed to "here definitely".
 
 
 Release 0.5 (2008-06-25)
